# TrustLens

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-facilitator.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-data-indexer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: okx-marketplace-census-2026-07-10.csv
indexer/: __init__.py  category.py  census.py  db.py  models.py  parse.py  refresh.py  scraper.py
scoring/: __init__.py  components.py  engine.py  persist.py  stats.py
server/: __init__.py  app.py  db.py  main.py  payments.py  tools.py
submission/: RUNBOOK.md  demo-script.md  listing-copy.md  x-post-draft.md
tests/: conftest.py  test_category.py  test_db.py  test_parse.py  test_payments.py  test_payments_gate.py  test_refresh.py  test_refresh_scores.py  test_refresh_web.py  test_scoring_components.py  test_scoring_engine.py  test_scoring_golden.py  test_scoring_persist.py  test_scraper.py  test_server_app.py  test_server_tools.py  test_submission_language.py  test_web_badge.py  test_web_build.py
tests/fixtures/: okx_detail_3345.html  okx_detail_changed_markup.html  okx_detail_empty_spa.html  okx_detail_missing_keys.html
web/: __init__.py  badge.py  build.py
(+43 files in other folders)
