[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trustlens"
version = "0.1.0"
description = "TrustLens - pay-per-call trust scores for OKX.AI marketplace agents (MCP + x402)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.0",
    "fastmcp>=3,<4",
    "uvicorn==0.51.0",
    "httpx==0.28.1",
    "beautifulsoup4==4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
]

[tool.setuptools]
packages = ["indexer", "scoring", "server", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate scoped to scoring/ (SCOR-04). Known footgun: a subset run that
# skips the scoring tests measures 0% and fails the gate — use
# `python -m pytest <subset> --no-cov` for partial runs.
addopts = "--cov=scoring --cov-report=term-missing --cov-fail-under=90"
